<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_news_rank_opinion"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/view_news_rank_season"
                layout="@layout/view_news_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_horizontal"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tl_news_rank_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_fill_8_rect"
                android:backgroundTint="@color/gray_200"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:stretchColumns="1"
                app:layout_constraintDimensionRatio="327:36"
                app:layout_constraintTop_toBottomOf="@id/view_news_rank_season">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_news_rank_rank"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/tv_news_tab_rank"
                        android:textAppearance="@style/TextAppearance.Wable.Caption4"
                        android:textColor="@color/gray_600" />

                    <TextView
                        android:id="@+id/tv_news_rank_team_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/tv_news_rank_table_team_name"
                        android:textAppearance="@style/TextAppearance.Wable.Caption4"
                        android:textColor="@color/gray_600" />

                    <TextView
                        android:id="@+id/tv_news_rank_win"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/tv_news_rank_table_win"
                        android:textAppearance="@style/TextAppearance.Wable.Caption4"
                        android:textColor="@color/gray_600" />

                    <TextView
                        android:id="@+id/tv_news_rank_loss"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/tv_news_rank_table_loss"
                        android:textAppearance="@style/TextAppearance.Wable.Caption4"
                        android:textColor="@color/gray_600" />

                    <TextView
                        android:id="@+id/tv_news_rank_win_percentage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/tv_news_rank_table_win_percentage"
                        android:textAppearance="@style/TextAppearance.Wable.Caption4"
                        android:textColor="@color/gray_600" />

                    <TextView
                        android:id="@+id/tv_news_rank_point_difference"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/tv_news_rank_table_point_difference"
                        android:textAppearance="@style/TextAppearance.Wable.Caption4"
                        android:textColor="@color/gray_600" />

                </TableRow>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tl_news_rank_title"
                tools:itemCount="15"
                tools:listitem="@layout/item_news_rank" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_news_rank_opinion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_fill_12_rect"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:text="@string/btn_news_rank_opinion"
        android:textAppearance="@style/TextAppearance.Wable.Body3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="328:48" />

</androidx.constraintlayout.widget.ConstraintLayout>
